cabal-version:       3.4
name:                glualint
version:             1.24.3
synopsis:            Attempts to fix your syntax erroring Lua files.
description:         Linter for Lua, specifically the variant used in Garry's mod.
homepage:            https://github.com/FPtje/GLuaFixer
license:             LGPL-2.1-or-later
license-file:        LICENSE
author:              Falco Peijnenburg
maintainer:          fpeijnenburg@gmail.com
copyright:           Falco Peijnenburg
category:            Language
build-type:          Simple
extra-source-files:  README.md

library
  default-language: Haskell2010

  build-depends:
      base
    , aeson
    , bytestring
    , containers
    , parsec
    , pretty
    , uu-parsinglib >=2.8
    , uuagc >= 0.9.40.3
    , uuagc-cabal >= 1.0.3.0

  hs-source-dirs: src

  exposed-modules:
      GLua.Lexer
    , GLua.PSLexer
    , GLua.Parser
    , GLua.PSParser
    , GLua.TokenTypes
    , GLua.ASTInstances
    , GLua.LineLimitParser
    , GLuaFixer.BadSequenceFinder
    , GLuaFixer.Interface
    , GLuaFixer.LintMessage
    , GLuaFixer.LintSettings
    , GLua.AG.AST
    , GLua.AG.PrettyPrint
    , GLuaFixer.AG.LexLint
    , GLua.AG.Token
    , GLuaFixer.AG.ASTLint

  ghc-options:
    -Wall
    -fno-warn-unused-do-bind


  other-extensions:
      FlexibleInstances
    , TypeSynonymInstances
    , MultiParamTypeClasses
    , Rank2Types
    , FlexibleContexts
    , NoMonomorphismRestriction
    , CPP


executable glualint
  -- Disable the executable for ghcjs and older versions of ghc. LintMain.hs
  -- uses functions only available in ghc 8+
  if !impl(ghc >= 8.0.0)
    buildable: False
  main-is:             GLuaFixer/Main.hs
  other-modules:
    GLuaFixer.Cli
    GLuaFixer.Effects.Run
    GLuaFixer.Effects.AnalyseGlobals
    GLuaFixer.Effects.Cli
    GLuaFixer.Effects.Files
    GLuaFixer.Effects.Interruptible
    GLuaFixer.Effects.Logging
    GLuaFixer.Effects.Settings
    GLuaFixer.Version
    Paths_glualint
  autogen-modules:
    Paths_glualint
  other-extensions:
      FlexibleInstances
    , TypeSynonymInstances
    , MultiParamTypeClasses
    , Rank2Types
    , FlexibleContexts
    , NoMonomorphismRestriction
    , CPP

  build-depends:
      aeson
    , base
    , bytestring
    , containers
    , deepseq
    , directory
    , effectful
    , filemanip
    , filepath
    , glualint
    , optparse-applicative
    , signal

  hs-source-dirs:      app
  ghc-options:         -O3 -Wall
  default-language:    Haskell2010
