cabal-version:      3.4
name:               glualint
version:            1.24.5
synopsis:           Attempts to fix your syntax erroring Lua files.
description:
  Linter for Lua, specifically the variant used in Garry's mod.

homepage:           https://github.com/FPtje/GLuaFixer
bug-reports:        https://github.com/FPtje/GLuaFixer/issues
license:            LGPL-2.1-or-later
license-file:       LICENSE
author:             Falco Peijnenburg
maintainer:         fpeijnenburg@gmail.com
copyright:          Falco Peijnenburg
category:           Language
build-type:         Simple
extra-source-files: README.md

library
  default-language: Haskell2010
  build-depends:
    , aeson          >=2        && <3
    , base           >=4.5      && <5
    , bytestring     >=0.11     && <1
    , containers     >=0.6      && <1
    , parsec         >=3        && <4
    , pretty         >=1.1      && <1.2
    , uu-parsinglib  >=2.8      && <3
    , uuagc          >=0.9.40.3 && <0.10
    , uuagc-cabal    >=1.0.3.0  && <2

  hs-source-dirs:   src
  exposed-modules:
    GLua.AG.AST
    GLua.AG.PrettyPrint
    GLua.AG.Token
    GLua.ASTInstances
    GLua.Lexer
    GLua.LineLimitParser
    GLua.Parser
    GLua.PSLexer
    GLua.PSParser
    GLua.TokenTypes
    GLuaFixer.AG.ASTLint
    GLuaFixer.AG.LexLint
    GLuaFixer.BadSequenceFinder
    GLuaFixer.Interface
    GLuaFixer.LintMessage
    GLuaFixer.LintSettings

  ghc-options:      -Wall -fno-warn-unused-do-bind
  other-extensions:
    NoMonomorphismRestriction
    CPP
    FlexibleContexts
    FlexibleInstances
    MultiParamTypeClasses
    Rank2Types
    TypeSynonymInstances

executable glualint
  -- Disable the executable for ghcjs and older versions of ghc. LintMain.hs
  -- uses functions only available in ghc 8+
  if !impl(ghc >=8.0.0)
    buildable: False

  main-is:          GLuaFixer/Main.hs
  other-modules:
    GLuaFixer.Cli
    GLuaFixer.Effects.AnalyseGlobals
    GLuaFixer.Effects.Cli
    GLuaFixer.Effects.Files
    GLuaFixer.Effects.Interruptible
    GLuaFixer.Effects.Logging
    GLuaFixer.Effects.Run
    GLuaFixer.Effects.Settings
    GLuaFixer.Version
    Paths_glualint

  autogen-modules:  Paths_glualint
  other-extensions:
    NoMonomorphismRestriction
    CPP
    FlexibleContexts
    FlexibleInstances
    MultiParamTypeClasses
    Rank2Types
    TypeSynonymInstances

  build-depends:
    , aeson
    , base                  >=4.5 && <5
    , bytestring
    , containers
    , deepseq
    , directory
    , effectful
    , filemanip
    , filepath
    , glualint
    , optparse-applicative
    , signal

  hs-source-dirs:   app
  ghc-options:      -O3 -Wall
  default-language: Haskell2010
